building User factory with ngResource

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="yabee">
   <head>
     <meta charset="utf-8">
     <title>Angular Stack Setup</title>
@@ -8,6 +8,7 @@
     <!-- inject:css -->
     <!-- endinject -->
   </head>
-  <body>
+  <body ng-controller="MainCtrl as main">
+    {{ 2 + 3 }}
   </body>
 </html>
