offer factory finished

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,13 @@
   </head>
   <body ng-controller="MainCtrl as main">
     {{ 2 + 3 }}
+    <div class="outline">
     {{ main.users }}
+  </div>
+    <div class="outline">
+    {{ main.adverts }}
+  </div>
+
+
   </body>
 </html>
