--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/">
     <meta charset="utf-8">
-    <title>Angular Stack Setup</title>
+    <title>Yabee</title>
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
@@ -16,9 +16,13 @@
         <a ui-sref="usersIndex">Users</a>
         <a ui-sref="advertsIndex">Adverts</a>
         <a ui-sref="offersIndex">Offers</a>
+        <li ng-if="!main.isAuthenticated()"><a ui-sref="login" ui-sref-active="active">Login</a></li>
+        <li ng-if="!main.isAuthenticated()"><a ui-sref="register" ui-sref-active="active">Register</a></li>
+        <li ng-if="main.isAuthenticated()"><a ng-click="main.logout()" href="#">Logout</a></li>
       </nav>
     </header>
     {{ 2 + 3 }}
+    <main ui-view></main>
     <div class="outline">
         <h1>Users</h1>
       {{ main.users }}
@@ -35,6 +39,5 @@
       <h1>Messages</h1>
       {{ main.messages}}
     </div>
-    <main ui-view></main>
   </body>
 </html>
