added error message to index.html and changed main controller to work with it

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       </nav>
     </header>
     {{ 2 + 3 }}
+    <div class="message" ng-if="main.message">{{ main.message }}</div>
     <main ui-view></main>
     <div class="outline">
         <h1>Users</h1>
