--- a/src/index.html
+++ b/src/index.html
@@ -16,29 +16,12 @@
         <a ui-sref="usersIndex">Users</a>
         <a ui-sref="advertsIndex">Adverts</a>
         <a ui-sref="offersIndex">Offers</a>
-        <li ng-if="!main.isAuthenticated()"><a ui-sref="login" ui-sref-active="active">Login</a></li>
-        <li ng-if="!main.isAuthenticated()"><a ui-sref="register" ui-sref-active="active">Register</a></li>
-        <li ng-if="main.isAuthenticated()"><a ng-click="main.logout()" href="#">Logout</a></li>
+        <a ui-sref="login" ui-sref-active="active" ng-if="!main.isAuthenticated()">Login</a>
+        <a ui-sref="register" ui-sref-active="active" ng-if="!main.isAuthenticated()">Register</a>
+        <a ng-click="main.logout()" href="#" ng-if="main.isAuthenticated()">Logout</a>
       </nav>
     </header>
-    {{ 2 + 3 }}
     <div class="message" ng-if="main.message">{{ main.message }}</div>
     <main ui-view></main>
-    <div class="outline">
-        <h1>Users</h1>
-      {{ main.users }}
-    </div>
-    <div class="outline">
-      <h1>Adverts</h1>
-      {{ main.adverts }}
-    </div>
-    <div class="outline">
-      <h1>Offers</h1>
-      {{ main.offers }}
-    </div>
-    <div class="outline">
-      <h1>Messages</h1>
-      {{ main.messages}}
-    </div>
   </body>
 </html>
