--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,6 @@
     <header>
       <nav>
         <a ui-sref="home">Home</a>
-        <a ui-sref="messagesIndex">Messages</a>
         <a ui-sref="usersIndex">Users</a>
         <a ui-sref="advertsIndex">Adverts</a>
         <a ui-sref="offersIndex">Offers</a>
@@ -21,7 +20,7 @@
         <a ui-sref="register" ui-sref-active="active" ng-if="!main.isAuthenticated()">Register</a>
         <a ng-click="main.logout()" href="#" ng-if="main.isAuthenticated()">Logout</a>
         <span ng-if="main.isAuthenticated()">hello {{ main.currentUser.username }}</span>
-        <a ui-sref="usersShow({id: main.currentUser.id})" ng-if="main.isAuthenticated()">Your homepage</a>
+        <a ui-sref="profile" ng-if="main.isAuthenticated()">Your homepage</a>
       </nav>
     </header>
     <div class="message" ng-if="main.message">{{ main.message }}</div>
