added a class for the background image on offersShow

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <a ng-click="main.logout()" href="#" ng-if="main.isAuthenticated()">Logout</a>
 
         <a ui-sref="home">Home</a>
-        <a ui-sref="profile" ng-if="main.isAuthenticated()">Your Profile</a>
+        <a ui-sref="profile" ng-if="main.isAuthenticated()">My Yabee</a>
       </nav>
     </header>
     <div class="searchBar">
