added style sheet for mobile responsive styles, a few tweaks as they popped up testing the style sheet

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html ng-app="yabee">
   <head>
     <base href="/">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
     <title>Yabee</title>
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
     <!-- endinject -->
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">  </head>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
+  </head>
   <body ng-controller="MainCtrl as main">
     <header>
       <nav class="development">
